testing out a css fix for mac chrome 92 (as well as firefox, worked fine in chrome 91) - the segment list was being cut off, minimized groups were being given same space as normal groups even though their content was hidden

--- a/src/ng-override.css
+++ b/src/ng-override.css
@@ -51,3 +51,7 @@ div.segment-div > button.segment-copy-button, div.segment-div > button.nge-segme
     padding-right: 2px;
     padding-left: 2px;
 }
+
+.neuroglancer-minimizable-group {
+    flex: unset;
+}
